clang/test/BSC/Negative/Trait/GenericTrait/return_type_conflict/return_type_conflict.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This* this, T a);
};

struct S{
  int x;
};

float struct S::foo(struct S* this, int a) {
  return this->x;
}

_Impl _Trait F<int> for struct S;  // expected-error {{type of 'foo' conflicts with that of '_Trait F<int>'}} expected-warning {{incompatible function pointer types initializing 'int (*)(void *, int)' with an expression of type 'float (*)(void *, int)'}}
                               
